fix：后端注册邮箱加密，删除user表几个没用的字段